<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_ros2_bridge</name>
  <version>0.1.0</version>
  <description>
    MQTT to ROS 2 bidirectional bridge node.
    Connects to an MQTT broker and bridges messages between MQTT topics and ROS 2 topics.
    Supports robot command topics (/robot/move, /robot/goal, etc.) and status topics.
  </description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <author email="user@example.com">User</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
